@@ -329,8 +329,8 @@ static void nma_about_cb (GtkMenuItem *mi, NMApplet *applet)
 
 	about_dialog = gnome_about_new (_("NetworkManager Applet"),
 	                                VERSION,
-	                                _("Copyright \xc2\xa9 2004-2006 Red Hat, Inc.\n"
-							    "Copyright \xc2\xa9 2005-2006 Novell, Inc."),
+	                                _("Copyright \xc2\xa9 2004-2007 Red Hat, Inc.\n"
+							    "Copyright \xc2\xa9 2005-2007 Novell, Inc."),
 	                                _("Notification area applet for managing your network devices and connections."),
 	                                authors,
 	                                NULL,
@@ -356,8 +356,8 @@ static void nma_about_cb (GtkMenuItem *mi, NMApplet *applet)
 	gtk_show_about_dialog (NULL,
 	                       "name", _("NetworkManager Applet"),
 	                       "version", VERSION,
-	                       "copyright", _("Copyright \xc2\xa9 2004-2005 Red Hat, Inc.\n"
-					                  "Copyright \xc2\xa9 2005-2006 Novell, Inc."),
+	                       "copyright", _("Copyright \xc2\xa9 2004-2007 Red Hat, Inc.\n"
+					                  "Copyright \xc2\xa9 2005-2007 Novell, Inc."),
 	                       "comments", _("Notification area applet for managing your network devices and connections."),
 	                       "website", "http://www.gnome.org/projects/NetworkManager/",
 	                       "authors", authors,
