@@ -1,5 +1,10 @@
 2007-02-16  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (nma_about_cb): update copyright dates in about dialog
+
+2007-02-16  Dan Williams  <dcbw@redhat.com>
+
 	Patch from Luca Ferretti
 
 	* src/applet.c
